2007-09-20  Dominique Dumont  <dominique.dumont at hp.com> v2.011

	* ObjScanner.pm (Populate): pseudo hashes are disabled for perl >=
	5.009

2004-07-30  domi  <domi at komarr.grenoble.hp.com> v2.010

	* ObjScanner.pm:
	Showing tied info can be disabled by option or menu (exclusive or)
	Removed unnecessary 'ROOT:' word from top level label

2004-07-28  domi  <domi at komarr.grenoble.hp.com> v2.009

	* ObjScanner.pm v2.8: Applied patch from MAREKR at cpan.org (See
	https://rt.cpan.org/Ticket/Display.html?id=5197) to better handle
	pseudo hashes (even though pseudo hashes are still obsolete)

2004-07-27  domi  <domi at komarr.grenoble.hp.com> v2.008

	* ObjScanner.pm : Applied Slaven Rezic's patch which fixes
	image associated to array elements. (See
	https://rt.cpan.org/Ticket/Display.html?id=6831)

2003-11-28  Dominique Dumont  <domi at komarr.grenoble.hp.com>

	* t/basic.t (new): works with Tk804.025 

2003-11-19  Dominique Dumont  <domi at komarr.grenoble.hp.com>

	* ObjScanner.pm v2.6: all configuration options can be called with
	a hyphen (i.e '-title' instead of 'title')
	(scan_object): call pack with hyphenated option (otherwise it
	breaks on Solaris with Tk800.025)

2003-11-14  Dominique Dumont  <domi at komarr.grenoble.hp.com>

	* ObjScanner.pm: v2.5: replaced obsolete WeakRef module by
	Scalar::Util
	Note that pseudo-hashes are deprecated. 

2003-03-21  Dominique Dumont  <domi at komarr.grenoble.hp.com>

	* ObjScanner.pm v 2.4 (analyse_element): 
	- recognize weak references

2003-02-28  Dominique Dumont v2.3  <domi at komarr.grenoble.hp.com>

	* ObjScanner.pm (scan_object): 
	- added autonomous scan popup widget

2003-01-31  Dominique Dumont  <domi at komarr.grenoble.hp.com>

	* ObjScanner.pm v2.1 : 
	External changes:
 	- added view_pseudo parameter
	- can view intern of tied scalar, hash or array by using middle-button
	- text window is removed from scanner and is now displayed in popup
	  window.