@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Tk-ObjScanner
-version:      2.011
+version:      2.012
 version_from: ObjScanner.pm
 installdirs:  site
 requires:
