@@ -1,4 +1,7 @@
 use ExtUtils::MakeMaker;
+
+require 5.006 ;
+
 # See lib/ExtUtils/MakeMaker.pm for details of how to influence
 # the contents of the Makefile that is written.
 WriteMakefile
